Adds Counter to SDK alpha.proto (#3002)
* Adds Counter proto message and rpc methods to SDK alpha.proto as part of
feature CountsAndLists.

Formats Counter message and rpc methods per Google AIP https://google.aip.dev/general guidance.
Stubs out counter methods in the SDK server and alpha_test.
Implements the Counter gRPC get and update methods in the LocalSDKServer.

* Adds Google API proto files for gRPC standard methods

* Autogenerated files for Go SDK and adding fmutils

* Updates per reviewer comments
